<resources>
    <string name="app_name">Dota2谁最菜</string>
    <string name="dlg_content">使用此app，必须在游戏中共享比赛历史。\n第一次使用，请输入数字id：</string>
    <string name="share_content">【Dota2谁最菜】全方位的dota2战绩查询分析app，你也来体验一下吧~</string>
    <string name="last_login_time">上次在线： %1$s</string>
    <string name="action_bar_search">搜索</string>
    <string name="lingchen">凌晨</string>
    <string name="shangwu">上午</string>
    <string name="zhongwu">中午</string>
    <string name="xiawu">下午</string>
    <string name="wanshang">晚上</string>
    <string name="ganggang">刚刚</string>
    <string name="fenzhongqian"> 分钟前</string>
    <string name="xiaoshiqian"> 小时前</string>
    <string name="jintian">今天</string>
    <string name="zuotian">昨天</string>
    <string name="qiantian">前天</string>
    <string name="title_activity_items_detail">物品详细</string>
    <string name="title_activity_hero_detail">英雄详细</string>
    <string name="title_activity_about">关于</string>
    <string name="main_actionBar_tab_hero">英雄</string>
    <string name="main_actionBar_tab_item">物品</string>
    <string name="main_actionBar_tab_skill">技巧</string>
    <string name="main_actionBar_tab_favorite">收藏</string>
    <string name="menu_hero_role">按定位</string>
    <string name="menu_hero_attack">按攻击</string>
    <string name="menu_hero_factions">按阵营</string>
    <string name="menu_hero_type">按类型</string>
    <string name="menu_hero_statsall">排序</string>
    <string name="menu_items_qual">按品质</string>
    <string name="menu_items_itemcat">按分类</string>
    <string name="menu_addfavorite">添加到收藏</string>
    <string name="menu_removefavorite">从收藏中删除</string>
    <string name="text_items_repice_name">合成卷轴</string>
    <string name="text_items_mana_label">魔法消耗:</string>
    <string name="text_items_cd_label">冷却时间:</string>
    <string name="text_items_components_label">合成所需物品:</string>
    <string name="text_items_tocomponents_label">可合成物品:</string>
    <string name="text_items_toheros_label">推荐英雄使用:</string>
    <string name="text_hero_abilities_label">技能:</string>
    <string name="text_hero_itembuilds_starting_label">出门装备:</string>
    <string name="text_hero_itembuilds_early_label">前期装备:</string>
    <string name="text_hero_itembuilds_core_label">核心装备:</string>
    <string name="text_hero_itembuilds_luxury_label">可选装备:</string>
    <string name="text_hero_skillup_label">技能加点:</string>
    <string name="text_hero_stats_demo_label">智力</string>
    <string name="text_hero_stats_demo_value">21 + 2.80</string>
    <string name="text_division_label">/</string>
    <string name="text_favorite_emptylist">暂无收藏…</string>
    <string name="text_hero_item_used">使用英雄: %1$s</string>
    <string name="text_hero_item_kda">所有玩家平均KDA: %1$s</string>
    <string-array name="array_hero_stats">
        <item>智力</item>
        <item>敏捷</item>
        <item>力量</item>
        <item>伤害</item>
        <item>移速</item>
        <item>护甲</item>
    </string-array>
    <string-array name="array_hero_detailstats">
        <item>等级</item>
        <item>生命值</item>
        <item>魔法值</item>
        <item>攻击力</item>
        <item>护甲</item>
        <item>视野范围</item>
        <item>攻击范围</item>
        <item>弹道速度</item>
    </string-array>
    <string-array name="search_type_array">
        <item>精确</item>
        <item>模糊</item>
    </string-array>
    <string name="language">english</string>
    <string name="heroes_list">Loading heroes list</string>
    <string name="loading_data_for">Loading data for: {0}</string>
    <string name="loading">Loading…</string>
    <string name="loading_complete">Loading completed</string>
    <string name="error_during_load">There was an error during loading</string>
    <string name="info">INFO</string>
    <string name="skills">SKILLS</string>
    <string name="melee">{0} (Melee)</string>
    <string name="level">Level</string>
    <string name="hp">Hit points</string>
    <string name="mp">Mana</string>
    <string name="damage">Damage</string>
    <string name="armor">Armor</string>
    <string name="attacks_per_second">Attacks/second</string>
    <string name="movespeed">Movement Speed</string>
    <string name="attack_range">Attack Range</string>
    <string name="turn_rate">Turn rate</string>
    <string name="sight_range">Sight range (day/night)</string>
    <string name="attack_duration">Attack duration</string>
    <string name="cast_duration">Cast duration</string>
    <string name="missile_speed">Missile Speed</string>
    <string name="instant">Instant</string>
    <string name="exit_msg">Close app?</string>
    <string name="back_toast">Click BACK again to exit</string>
    <string name="makes_from">Recipe</string>
    <string name="makes_to">Reqired for</string>
    <string name="cd">Cooldown:</string>
    <string name="mc">Mana cost:</string>
    <string name="recipe">Recipe</string>
    <string name="starting_items">STARTING ITEMS</string>
    <string name="starting_items_secondary">STARTING ITEMS SECONDARY</string>
    <string name="early_game">EARLY GAME</string>
    <string name="early_game_secondary">EARLY GAME SECONDARY</string>
    <string name="core_items">CORE ITEMS</string>
    <string name="core_items_secondary">CORE ITEMS SECONDARY</string>
    <string name="luxury_items">LUXURY</string>
    <string name="default_guide">ITEMS</string>
    <string name="guides">GUIDES</string>
    <string name="nickname">Player\'s nickname</string>
    <string name="kills"><b>Kills:</b></string>
    <string name="deaths"><b>Deaths:</b></string>
    <string name="assists"><b>Assists:</b></string>
    <string name="gold"><b>Gold:</b></string>
    <string name="last_hits"><b>Last hits:</b></string>
    <string name="denies"><b>Denies:</b></string>
    <string name="gpm"><b>GPM:</b></string>
    <string name="xpm"><b>XPM:</b></string>
    <string name="radiant">RADIANT</string>
    <string name="dire">DIRE</string>
    <string name="dire_win">Dire team win</string>
    <string name="radiant_win">Radiant team win</string>
    <string name="common">COMMON</string>
    <string name="empty_player_list">If You would like to see your statistics, \n
        You need to open Dota 2 client, \n
        click Settings icon->Options \n
        and set Expose Public Match Data to On. \n
        After some time You\'ll be able to search game history by your dota2 nickname.</string>
    <string name="empty_player_group_list">Add players to your group list \n
        (press + after searching for player on SEARCH tab),\n
        to see them here.
    </string>
    <string name="search_history">Search history:</string>
    <string name="heroes_search">Search by heroes</string>
    <string name="nick_search">Search by nickname</string>
    <string name="empty_match_hostory">Empty match list</string>
    <string name="error_loading">Data loading error. Please, check your internet connection and try again later.</string>
    <string name="abandoned">Abandoned game</string>
    <string name="leaved">Clicked leave</string>
    <string name="disconnected">Disconnected</string>
    <string name="not_picked">Haven\'t picked</string>
    <string name="afk">AFK</string>
    <string name="never_connected">Never connected</string>
    <string name="never_connected_too_long">Too long to connect</string>
    <string name="match_id_">Match id:</string>
    <string name="match_id">Match id</string>
    <string name="start_time">Start time:</string>
    <string name="match_length">Match length:</string>
    <string name="lobby_type">Lobby type:</string>
    <string name="game_mode">Game mode:</string>
    <string name="bot">Bot</string>
    <string name="hero_damage"><b>Hero damage:</b></string>
    <string name="hero_healing"><b>Hero healing:</b></string>
    <string name="tower_damage"><b>Tower damage:</b></string>
    <string name="unknown_nickname">Nickname unknown</string>
    <string name="skill_build">SKILL BUILD</string>
    <string name="grid_carousel">Grid\carousel</string>
    <string name="item_build">ITEM BUILD</string>
    <string name="tooltips">TOOLTIPS</string>
    <string name="guide">Guide:</string>
    <string name="tooltips_for_skills">For skills:</string>
    <string name="tooltips_for_items">For items:</string>
    <string name="filter">FILTER</string>
    <string name="about">About</string>
    <string name="add_player_title">Add player to list</string>
    <string name="delete_player_title">Delete player from list</string>
    <string name="delete_player_msg">Are You sure You wanna delete {0} from Your lists?</string>
    <string name="delete">Delete</string>
    <string name="responses">RESPONSES</string>
    <string name="response_search">Search by response</string>
    <string name="response_dialog_title">Action with response</string>
    <string name="file_saving_error">File saving error</string>
    <string name="ringtone_set">Ringtone has been set!</string>
    <string name="loading_response_error">Error on loading response</string>
    <string name="match_history_closed">Cannot get match history for a user that hasn\'t allowed it</string>
    <string name="download">Download</string>
    <string name="invert_selection">Invert selection</string>
    <string name="attempt">Attempts:</string>
    <string name="score">Score:</string>
    <string name="back">Back</string>
    <string name="total_score">Total score: {0}</string>
    <string name="game_over">Game over!</string>
    <string name="show_right">Correct answer</string>
    <string name="right">Right!</string>
    <string name="wrong">Wrong!</string>
    <string name="quiz">QUIZ</string>
    <string name="choose_items_from">Test Your Dota 2 items knowledge</string>
    <string name="choose_hero_skill">Choose ability of this hero</string>
    <string name="by_items">By items</string>
    <string name="by_abilities">By abilities</string>
    <string name="by_random">Random</string>
    <string name="record_attempt">With time limit</string>
    <string name="repeat">Repeat</string>
    <string name="seconds_remaining">Time left: {0} sec.</string>
    <string name="record_attempt_help">You\'ll have 3 attempts and 60 seconds time limit. \n
        Each correct answer will increase your time limit for 0.5 sec.</string>
    <string name="show_records">Show records</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="achievements">Achievements</string>
    <string name="guide_name">Guide title</string>
    <string name="attention">Attention</string>
    <string name="guide_creator_message">Guides contains 2 parts:\n
        -Items\n
        -Abilities\n
        On Items tab You can add up to 6 game stages. For each item You can add a tooltip (click on added item).\n
        On Abilities tab You should set, which ability should be taken and on which level. By clicking on ability icon You can add a tooltip for it.\n
        After saving guide You can send it to me via email (from Hero guides screen), so I can add it to apk. I won\'t add guides without tooltips!
    </string>
    <string name="guide_next">Next</string>
    <string name="add_guide">Add guide</string>
    <string name="save">Save</string>
    <string name="add_game_part">Add game part</string>
    <string name="sure_delete_part">Are You sure, You wanna delete this part?</string>
    <string name="game_part_name">Game part name</string>
    <string name="select_action">Select action</string>
    <string name="add_tooltip">Add tooltip</string>
    <string name="add">Add</string>
    <string name="error">Error</string>
    <string name="skill_tooltip">Skill tooltip</string>
    <string name="guide_saved">Guide saved!</string>
    <string name="edit_guide">Edit guide</string>
    <string name="delete_guide">Delete guide</string>
    <string name="guide_deleted">Guide deleted</string>
    <string name="guide_deletion_error">Deleting guide error</string>
    <string name="send_guide">Send to developer</string>
    <string name="net_worth"><b>Net worth:</b></string>
</resources>