<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/match_summary_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingBottom="10dp">

            <TableRow android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/match_id_"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/match_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp" />
            </TableRow>

            <TableRow android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_time"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp" />
            </TableRow>

            <TableRow android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/match_length"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/match_length"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp" />
            </TableRow>

            <TableRow android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lobby_type"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lobby_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp" />
            </TableRow>

            <TableRow android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_mode"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/game_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:id="@+id/cm_mode_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingBottom="10dp">

            <TableRow
                android:id="@+id/team_names"
                android:layout_marginTop="5dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/radiant_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text=" vs " />

                <TextView
                    android:id="@+id/dire_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <!--
    match_id
    время начала
    продолжительность
    tower_status_radiant    http://wiki.teamfortress.com/wiki/WebAPI/GetMatchDetails#Tower_Status
    tower_status_dire
    barracks_status_radiant
    barracks_status_dire
    cluster (откуда качать повтор. на мобиле не надо)
    время фб
    тип лобби
    сколько игроков (ботов)
    id лиги/
    сколько + игре, сколько - игре.
    game mode
    '1' : 'All Pick',
'2' : "Captains Mode",
'3' : 'Random Draft',
'4' : 'Single Draft',
'5' : 'All Random',
'6' : '?? INTRO/DEATH ??',
'7' : 'The Diretide',
'8' : "Reverse Captains Mode",
'9' : 'Greeviling',
'10' : 'Tutorial',
'11' : 'Mid Only',
'12' : 'Least Played',
'13' : 'New Player Pool'
    -->
</ScrollView>